[package]
name = "user_room"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1.14.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "8.3"
redis = { version = "0.23", features = ["tokio-comp"] }
totp-rs = "5.4"
oauth2 = "4.4"
webauthn-rs = "0.4"


tokio-tungstenite = "0.20"
tower = "0.4.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
